# monadic-patterns

./: .gitignore  monadic-patterns.cabal  stack.yaml
src/Control/: Pattern.hs
src/Control/Pattern/: Automata.hs  Free.hs
