name:                monadic-patterns
version:             0.1.0.0
-- synopsis:
-- description:
author:              Alejandro Serrano
maintainer:          trupill@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Pattern,
                       Control.Pattern.Free
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.8  && < 5,
                       free >= 4.12 && < 5,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
